# libcoro

./: CMakeLists.txt
.github/workflows/: ci-fedora.yml  ci-macos.yml  ci-ubuntu.yml  ci-windows.yml
coromake/: CMakeLists.txt  Config.cmake.in  compiler.cmake  platform.cmake
examples/: CMakeLists.txt
test/: CMakeLists.txt
